<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:enabled="true"
        android:icon="@drawable/ic_home"
        android:title="@string/home"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_user_list"
        android:enabled="true"
        android:icon="@drawable/ic_user_list"
        android:title="@string/user_list"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_my_encryption"
        android:enabled="true"
        android:icon="@drawable/ic_decryption"
        android:title="@string/my_encryption"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_help"
        android:enabled="true"
        android:icon="@drawable/ic_help"
        android:title="@string/help"
        app:showAsAction="withText"/>
    <item
        android:id="@+id/action_exit"
        android:enabled="true"
        android:icon="@drawable/ic_exit"
        android:title="@string/exit"
        app:showAsAction="withText"/>
</menu>